--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lessons Home</title>
-</head>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<body>
-    <main class="page">
+  <body>
+    <div class="wrapper">
+      <main class="page">
         <div class="page__container">
-            <ol>
-                <li><a href="./lesson_2/les-2.html">Задачі Lesson_2</a></li>
-            </ol>
+          <ol>
+            <li>1)<a href="./lesson_2/les-2.html">Задачі Lesson_2</a></li>
+            <li>2)<a href="./lesson_3/les-3.html">Задачі Lesson_3</a></li>
+          </ol>
         </div>
-    </main>
-
-</body>
-
+      </main>
+    </div>
+  </body>
 </html>
