--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <ol>
             <li>1)<a href="./lesson_2/les-2.html">Задачі Lesson_2</a></li>
             <li>2)<a href="./lesson_3/les-3.html">Задачі Lesson_3</a></li>
+            <li>3)<a href="./lesson_5/les-5.html">Задачі Lesson_5</a></li>
           </ol>
         </div>
       </main>
