--- a/lesson_3/les-3.html
+++ b/lesson_3/les-3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style_3.css" />
     <title>Lesson_3</title>
   </head>
 
@@ -96,7 +96,6 @@
                 /> -->
                 <button type="button" class="form__button-3">Calc</button>
               </form>
-              <div class="out-3">Виправте, будь ласка, помилку</div>
             </li>
 
             <li>
