--- a/lesson_5/les-5.html
+++ b/lesson_5/les-5.html
@@ -82,12 +82,35 @@
         </p>
       </li>
       <li>
+        <h3><a href="./tasks/task-13.html">Task 13</a></h3>
+        <p>
+          Морський бій. Комп’ютер випадково розташовує одиночний корабель на
+          полі розміром N*M. Маючи К снарядів користувач намагається потопити
+          корабель.
+        </p>
+      </li>
+      <li>
         <h3><a href="./tasks/task-14.html">Task 14</a></h3>
         <p>
           Каса. Користувачу повідомляють суму, яку йому треба сплатити.
           Користувач поступово вводить суму грошей до тих пір, поки суми не буде
           достатньо для оплати товарів (кожного разу користувачу повідомляють,
           яку ще суму потрібно ввести).
+        </p>
+      </li>
+      <li>
+        <h3><a href="./tasks/task-15.html">Task 15</a></h3>
+        <p>
+          Користувача поступово вводить показники температури протягом року.
+          Знайти середню температуру.
+        </p>
+      </li>
+      <li>
+        <h3><a href="./tasks/task-16.html">Task 16</a></h3>
+        <p>
+          Користувач поступово вводить прибуток магазину за кожен день протягом
+          N тижнів. Знайти загальну величину прибутку та вивести величину
+          прибутку протягом кожного окремого тижня.
         </p>
       </li>
     </ol>
