--- a/lesson_7/les-7.html
+++ b/lesson_7/les-7.html
@@ -70,7 +70,7 @@
           Створити функцію, яка виводить банер (у функцію передаються:
           зображення, заголовок та посилання, куди переходимо при кліку на
           зображення (тег img повине знаходитись у середині тега a:
-          <a> <img src="”шлях”" /> </a>
+          <!-- <a> <img src="”шлях”" /> </a> -->
         </p>
       </li>
       <li>
