--- a/lesson_7/les-7.html
+++ b/lesson_7/les-7.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style_7.css" />
     <title>Lesson_7</title>
   </head>
   <body>
-    <h1>ДЗ №5</h1>
+    <h1>ДЗ №7</h1>
     <ol>
       <li>
         <h3><a href="./tasks/task-0.html">Task 0</a></h3>
@@ -80,8 +80,13 @@
           дозволить підрахувати кількість від’ємних показів температури.
         </p>
       </li>
+      <li>
+        <h3><a href="./tasks/task-10.html">Task 10</a></h3>
+        <p>
+          Дано покази температур (довільна кількість). Розробити функцію, яка
+          дозволить знайти середнє значення для додатних показів температури.
+        </p>
+      </li>
     </ol>
-
-    <script src="js/lesson_6.js"></script>
   </body>
 </html>
